<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-8dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textSize="22dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="horizontal" >

        <Button
        android:id="@+id/main_chapter"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginLeft="10dp" 
        android:background="@drawable/main1"/>
         
       <Button
        android:id="@+id/main_real"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginLeft="7dp"
        android:background="@drawable/main2"
         />
        
       <Button
        android:id="@+id/main_error1"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:background="@drawable/main3"
        android:layout_marginLeft="7dp" /> 
        
    </LinearLayout>

  <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="175dp"
        android:orientation="horizontal" >
     
          
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_chaper"
            android:textSize="17dp"
            android:layout_marginLeft="23dp"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_real"
            android:textSize="17dp"
            android:layout_marginLeft="33dp"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_error"
            android:textSize="17dp"
            android:layout_marginLeft="32dp"
            android:textColor="#FFFFFF"/>
        
        
        
   </LinearLayout> 

    
    
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:orientation="horizontal" >
        
       <Button
        android:id="@+id/main_history1"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:background="@drawable/main4"
        android:layout_marginLeft="10dp" />
       <Button
        android:id="@+id/main_more"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginLeft="7dp"
        android:background="@drawable/main5"
         />
         
   </LinearLayout>
   <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="315dp"
        android:orientation="horizontal" >
       <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_history"
            android:textSize="17dp"
            android:layout_marginLeft="23dp"
            android:textColor="#FFFFFF"/>
       <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_more"
            android:textSize="17dp"
            android:layout_marginLeft="49dp"
            android:textColor="#FFFFFF"/>

   </LinearLayout>
   
   <ImageView
        android:id="@+id/poster1"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:scaleType="fitXY"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/app_name"/>
   
   
</RelativeLayout>
    <!-- <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="175dp"
        android:orientation="horizontal" >
     
          
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_chaper"
            android:textSize="17dp"
            android:layout_marginLeft="23dp"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_real"
            android:textSize="17dp"
            android:layout_marginLeft="33dp"
            android:textColor="#FFFFFF"/>
        
        
        
</LinearLayout>
     -->
   

    <!-- <Button
        android:id="@+id/radio_about"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_alignBaseline="@+id/main_error1"
        android:layout_alignBottom="@+id/main_error1"
        android:layout_alignRight="@+id/main_error1"
        android:background="@drawable/about" />

    
      <Button
            android:id="@+id/main_history1"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/main_real"
            android:text="@string/menu_history"
            android:textSize="20dp" />

    <Button
        android:id="@+id/main_setting"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/main_error1"
        android:layout_alignParentRight="true"
        android:layout_marginRight="27dp"
        android:text="@string/setting" />

    <Button
        android:id="@+id/main_fankui"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_alignRight="@+id/main_chapter"
        android:layout_alignTop="@+id/main_chapter"
        android:text="@string/menu_fankui" />

    <Button
        android:id="@+id/radio_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/radio_about"
        android:background="@drawable/share" /> -->


<!--
        




    -->
    <!-- android:scaleType="matrix" -->